# campanula

./: .gitignore  README.md  meson.build  meson.options
src/: api.c  api.h  auth.c  auth.h  campanula.c  campanula.h  cleanup.h  collections.c  collections.h  config.c  config.h  destructors.c  destructors.h  eventloop.c  eventloop.h  log.c  log.h  macros.h  network.c  network.h  pollen_impl.c  requests.c  requests.h  signals.c  signals.h  song.c  song.h  urlencode.c  urlencode.h  xdg.c  xdg.h  xmalloc.c  xmalloc.h
src/api/: json.c  json.h  network.c  network.h  requests.c  requests.h  types.c  types.h
src/collections/: array.c  array.h  list.h  string.c  string.h  vec.c  vec.h
src/commands/: parse.c  parse.h
src/db/: cache.c  cache.h  init.h  internal.c  internal.h  populate.c  populate.h  query.c  query.h
src/mpris/: dbus.h  init.c  init.h  interfaces.c  interfaces.h
src/network/: events.h  init.h  network.c  request.h
src/player/: common.c  common.h  control.c  control.h  events.c  events.h  init.c  init.h  internal.c  internal.h  playlist.c  playlist.h  stream.c  stream.h  utils.c  utils.h
src/stream/: file.c  file.h  network.c  network.h  open.c  open.h
src/tui/: draw.c  draw.h  events.c  events.h  init.c  init.h  internal.c  internal.h  list.c  list.h  menu.c  menu.h  pad.c  pad.h  utils.c  utils.h
src/types/: album.c  album.h  artist.c  artist.h  cached_song.c  cached_song.h  song.c  song.h
test/: array.c  array_test.c  auth.c  cmd_parse.c  collections_test.c  list_test.c  meson.build  signals.c  signals_test.c  string_test.c  vec.c  xdg.c
